--- a/src/pages/learn/learn.css
+++ b/src/pages/learn/learn.css
@@ -14,3 +14,14 @@ a {
   top: 0;
   align-self: flex-start;
 }
+
+.profile-icon {
+  --button-size: 50px;
+  width: var(--button-size);
+  height: var(--button-size);
+  background-color: #484a4d;
+  border-radius: 50%;
+  padding: 15px;
+  margin: 2px;
+  color: #fff;
+}
