--- a/src/pages/videoplayer/videoplayer.css
+++ b/src/pages/videoplayer/videoplayer.css
@@ -8,3 +8,33 @@
   margin: 2px;
   color: #fff;
 }
+
+#videoSection {
+  position: relative;
+}
+
+#videoSection .video-player {
+  background: url("https://media.publit.io/file/w_300,h_200,c_fill/fil-TJ.jpg")
+    no-repeat center center/cover;
+  width: 100%;
+  height: 500px;
+}
+
+.video-player-button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  padding: 0.75rem 1.25rem;
+  border-radius: 10px;
+  background-color: purple;
+}
+
+.video-player-button:hover {
+  background-color: #484a4d;
+  color: white;
+  cursor: pointer;
+}
