--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,13 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow: auto;
@@ -11,4 +16,100 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+a {
+  text-decoration: none;
+}
+
+p {
+  margin: 0;
+}
+
+#accordian-body {
+  border-bottom: 1px solid #dcdde1;
+  box-shadow: 0px 2px 5px rgba(149, 157, 165, 0.2);
+}
+
+#course-card:hover,
+#expanded-card:hover,
+#accordian-body:hover {
+  border-radius: 5px;
+  background-color: #f5f6fa;
+  cursor: pointer;
+}
+
+.course-info-card {
+  position: sticky;
+  top: 0;
+  align-self: flex-start;
+}
+
+#course-desc {
+  width: 75%;
+  order: 1;
+}
+#course-desc-card {
+  width: 25%;
+  order: 2;
+}
+
+#filter {
+  width: 20%;
+}
+
+#courseList {
+  width: 80%;
+}
+
+#miniFilter {
+  transform: translateX(-100%);
+  transition: 0.5s ease-in-out;
+  width: 50%;
+}
+
+#filterSearchBtn {
+  background-color: #303030;
+  color: #fff;
+}
+
+#expanded-content-card {
+  max-width: 650px;
+}
+
+@media screen and (max-width: 1024px) {
+  #filterSearchBtn {
+    background-color: #fff;
+    color: #303030;
+  }
+
+  #filter {
+    width: 0%;
+    display: none;
+  }
+
+  #courseList {
+    width: 100%;
+  }
+
+  #miniFilter {
+    width: 0%;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #miniFilter {
+    width: 100%;
+  }
+
+  #expanded-content-card {
+    max-width: 250px;
+  }
+
+  #course-desc {
+    width: 100%;
+  }
+  #course-desc-card {
+    width: 100%;
+  }
 }
